Update head and hero styles with background and text color

--- a/style.css
+++ b/style.css
@@ -19,12 +19,15 @@ li {
 
 a {
     text-decoration: none;
+    color: #F9FAF8;
 }
 
 .header {
+    background-color: #1F2937;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 
 }
 
@@ -42,10 +45,11 @@ a {
 
 
 .title-container {
+    background-color: #1F2937;
+    color: #F9FAF8;
     display: flex;
     /* flex-grow: 1; */
     justify-content: center;
-    width: 90%;
 }
 
 .first-section {
