--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body {
+    height: 100vh;
+    width: 100vh;
     display: flex;
+    flex: 1 1 0;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 /* ul and li look like trash. Can this be reduced/removed? */
@@ -16,11 +20,13 @@ li {
 
 a {
     text-decoration: none;
-    color: #F9FAF8;
+    color: #E5E7EB;
 }
 
-.header {
+.header, .footer {
     background-color: #1F2937;
+    display: flex;
+    flex-grow: 1;
 }
 
 .right-links {
@@ -37,13 +43,11 @@ a {
     align-items: center;
 }
 
-
-
 .title-container {
     background-color: #1F2937;
     color: #F9FAF8;
     display: flex;
-    flex-grow: 1;
+    flex: 1 1 0;
     justify-content: space-around;
     align-items: stretch;
     /* gap: 50px; */
@@ -53,4 +57,29 @@ a {
     display: flex;
     flex-direction: column;
     width: 50%;
+}
+
+.second-section {
+    background-color: grey;
+    display: flex;
+    /* justify-content: stretch; */
+    align-self: center;
+    padding: 20px;
+}
+
+.info {
+    height: 300px;
+}
+
+.quotes {
+    background-color: #E5E7EB;
+    flex: 1;
+}
+
+.sign-up {
+    flex: 1;
+}
+
+.footer {
+    height:
 }
