--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
     display: flex;
     flex: 1 1 0;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: stretch;
 }
 
 /* ul and li look like trash. Can this be reduced/removed? */
@@ -26,19 +26,17 @@ a {
 .header, .footer {
     background-color: #1F2937;
     display: flex;
-    flex-grow: 1;
+    justify-content: space-around;
 }
 
 .right-links {
     display: flex;
-    flex-grow: 1;
     gap: 25px;
     justify-content: center;
 }
 
 .left-links {
     display: flex;
-    flex: 1;
     justify-content: center;
     align-items: center;
 }
@@ -50,7 +48,7 @@ a {
     flex: 1 1 0;
     justify-content: space-around;
     align-items: stretch;
-    /* gap: 50px; */
+    gap: 50px;
 }
 
 .first-section {
@@ -62,13 +60,13 @@ a {
 .second-section {
     background-color: grey;
     display: flex;
-    /* justify-content: stretch; */
+    justify-content: stretch;
     align-self: center;
     padding: 20px;
 }
 
 .info {
-    height: 300px;
+    flex: 1;
 }
 
 .quotes {
@@ -81,5 +79,5 @@ a {
 }
 
 .footer {
-    height:
+    color: #E5E7EB
 }
