--- a/style.css
+++ b/style.css
@@ -1,9 +1,47 @@
 body {
     height: 100vh;
-    width: 100vh;
+    margin: 0;
+}
+
+.body-container {
     display: flex;
     flex: 1 1 0;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: stretch;
+    /* align-items: stretch; */
 }
+
+.title-container, .info, .quotes, .sign-up {
+    padding: 0 100px;
+}
+
+ul, li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    gap: 18px;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 0;
+    justify-content: space-between;
+    padding: 20px 100px;
+}
+
+.footer {
+    padding: 20px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* 
+.left-links {
+    display: flex;
+
+}
+.right-links {
+    display: flex;
+} */
