--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
 body {
     height: 100vh;
     margin: 0;
-}
-
-.body-container {
     display: flex;
     flex: 1 1 0;
     flex-direction: column;
-    /* align-items: stretch; */
+    justify-content: space-between;
+    align-items: stretch;
 }
+
+/* .body-container {
+    display: flex;
+    flex: 1 1 0;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: stretch;
+} */
 
 .title-container, .info, .quotes, .sign-up {
     padding: 0 100px;
@@ -29,7 +35,7 @@ h3, h2, p {
 .header {
     display: flex;
     flex-direction: row;
-    flex: 1 1 0;
+    /* flex: 1 1 0; */
     justify-content: space-between;
     padding: 20px 100px;
 }
@@ -44,7 +50,9 @@ h3, h2, p {
 /* Below styles the second section of this project, the title section under the header */
 
 .title-container {
-    display: flex;;
+    display: flex;
+    flex: 1;
+
 }
 
 .first-section {
@@ -58,7 +66,9 @@ h3, h2, p {
     display: flex;
     justify-content: center;
     align-items: center;
+    align-self: center;
     width: 50%;
+    height: 25%;
 
 }
 
@@ -69,6 +79,7 @@ h3, h2, p {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    flex: 1;
 
 }
 
@@ -94,6 +105,7 @@ h3, h2, p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex: 1;
 }
 
 /* Below styles the fifth section of this project, the Sign-Up section*/
@@ -104,6 +116,7 @@ h3, h2, p {
     display: flex;;
     justify-content: space-around;
     padding: 35px;
+    flex: 1;
 }
 
 .sign-up-text {
