--- a/style.css
+++ b/style.css
@@ -124,6 +124,8 @@ h3, h2, p {
 /* Below styles the fourth section of the this project, the Quotes section */
 
 .quotes {
+    background-color: #E5E7EB;
+    color: #1F2937;
     display: flex;
     flex-direction: column;
     justify-content: center;
