--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
+    text-align: center;
 }
 
 .title-container, .info, .quotes{
@@ -97,8 +98,8 @@ h3, h2, p {
 .info {
     color: #1F2937;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    /* flex-wrap: wrap; */
+    justify-content: flex-start;
     align-items: center;
     flex: 1;
     gap: 40px;
@@ -110,7 +111,7 @@ h3, h2, p {
     font-weight: bolder;
     color: #1F2937;
     display: flex;
-    justify-content: center;
+    justify-content: stretch;
     width: 100%;
 
 }
@@ -121,10 +122,7 @@ h3, h2, p {
     height: 150px;
     width: 150px;
 }
-.idfk {
-    display: flex;
-    flex-direction: row;    
-} 
+
 
 /* Below styles the fourth section of the this project, the Quotes section */
 
