--- a/style.css
+++ b/style.css
@@ -67,31 +67,42 @@ h3, h2, p {
 /* Below styles the second section of this project, the title section under the header */
 
 .title-container {
-    /* display: flex;
-    flex: 1; */
+    display: flex;
+    justify-content: space-between;
+    flex: 1;
     gap: 15px;
+    padding-bottom: 60px;
 
 }
 
 .first-section {
     font-size: 18px;
     color: #E5E7EB;
+    text-align: left;
     /* display: flex;
     flex-direction: column;
     flex: 1 1 0;
     justify-content: center;
     align-items: flex-start; */
+    width: 500px;
 }
 
 .second-section{
     background-color: grey;
-    /* display: flex;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    /* align-self: center; */
+    /* width: 50%;
+    height: 25%; */
+}
+
+.img-holder {
+    display: flex;
     justify-content: center;
     align-items: center;
-    align-self: center; */
-    width: 50%;
-    height: 25%;
-
+    height: 150px;
+    width: 400px;
 }
 
 /* Below styles the third section of this project, the Information section */
