Add Roboto font import to style

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
+html, body, html * {
+  font-family: 'Roboto', sans-serif;
+}
+
 body {
-    font-family: Roboto, sans-serif;
     color: #F9FAF8;
     height: 100vh;
     margin: 0;
@@ -35,9 +39,10 @@ h3, h2, p {
     margin: 0;
 }
 
-/* h2 {
+h2 {
     font-size: 48px;
-} */
+    font-weight: bolder;
+}
 
 .header, .footer, .title-container {
     background-color: #1F2937;
@@ -72,6 +77,7 @@ h3, h2, p {
     flex: 1;
     gap: 15px;
     padding-bottom: 60px;
+    padding-top: 60px;
 
 }
 
@@ -99,6 +105,7 @@ h3, h2, p {
 
 .img-holder {
     display: flex;
+    flex-shrink: 1;
     justify-content: center;
     align-items: center;
     height: 150px;
