--- a/style.css
+++ b/style.css
@@ -39,11 +39,6 @@ h3, h2, p {
     margin: 0;
 }
 
-h2 {
-    font-size: 48px;
-    font-weight: bolder;
-}
-
 .header, .footer, .title-container {
     background-color: #1F2937;
 }
@@ -111,6 +106,16 @@ h2 {
     height: 150px;
     width: 400px;
 }
+
+    #hero-header {
+        font-size: 48px;
+        font-weight: bolder;
+        color: #F9FAF8
+    }
+    
+    .first-section p { 
+        color: #E5E7EB
+    }
 
 /* Below styles the third section of this project, the Information section */
 
