--- a/style.css
+++ b/style.css
@@ -138,11 +138,9 @@ h3, h2, p {
 
 .info {
     color: #1F2937;
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    /* justify-content: flex-start; */
-    /* align-items: center; */
-    /* flex: 1; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 40px;
 
 }
@@ -151,8 +149,8 @@ h3, h2, p {
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
-    /* display: flex; */
-    /* justify-content: stretch; */
+    justify-content: center;
+    align-self: center;
     width: 100%;
 
 }
@@ -161,6 +159,10 @@ h3, h2, p {
     border-radius: 25px;
     border: 3px solid #3882F6;
     height: 150px;
+    width: 150px;
+}
+
+.info-text {
     width: 150px;
 }
 
