--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ body {
     height: 100vh;
     margin: 0;
     text-align: center;   
+    box-sizing: border-box;
     /* display: flex;
     flex: 1 1 0;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: stretch; */
-    box-sizing: border-box;
 
 }
 
@@ -172,11 +172,19 @@ h3, h2, p {
 .quotes {
     background-color: #E5E7EB;
     color: #1F2937;
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* flex: 1; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+.quote {
+    width: 450px;
+}
+
+.quote-author {
+    justify-content: flex-end;
 }
 
 /* Below styles the fifth section of this project, the Sign-Up section*/
