--- a/style.css
+++ b/style.css
@@ -7,14 +7,7 @@ body {
     color: #F9FAF8;
     height: 100vh;
     margin: 0;
-    /* text-align: center;    */
     box-sizing: border-box;;
-    /* display: flex;
-    flex: 1 1 0;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: stretch; */
-
 }
 
 .title-container, .info, .quotes{
@@ -84,22 +77,13 @@ h3, h2, p {
     font-size: 18px;
     color: #E5E7EB;
     text-align: left;
-    /* display: flex;
-    flex-direction: column;
-    flex: 1 1 0;
-    justify-content: center;
-    align-items: flex-start; */
     width: 500px;
 }
 
 .second-section{
     background-color: grey;
     display: flex;
-    /* justify-content: center; */
     align-items: center;
-    /* align-self: center; */
-    /* width: 50%;
-    height: 25%; */
 }
 
 .img-holder {
@@ -210,9 +194,9 @@ h3, h2, p {
 .sign-up-box {
     border-radius: 10px;
     background-color: #3882F6;
-    /* display: flex;; */
-    /* justify-content: space-around; */
-    /* flex: 1; */
+    display: flex;;
+    justify-content: space-around;
+    flex: 1;
     padding: 35px;
 }
 
@@ -222,7 +206,8 @@ h3, h2, p {
 }
 
 #sign-up-button2 {
-    /* align-self: center; */
+    align-self: center;
+    justify-content: center;
     background-color: #3882F6;
     border: solid 3px #E5E7EB;
     color: #E5E7EB;
