Update footer text alignment

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ h3, h2, p {
 
 .footer {
     padding: 20px 100px;
+    text-align: center;
 }
 
 /* Below styles the second section of this project, the title section under the header */
